# monitor-affinity

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
src/: main.rs
